--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,19 +8,14 @@ on:
 
 name: run tests
 jobs:
-  lint:
+  golangci-lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17.x
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run linters
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.29
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+        
+      - name: golangci-lint
+        uses: reviewdog/action-golangci-lint@v2
 
   test:
     strategy:
